--- a/EXPERIENCE.html
+++ b/EXPERIENCE.html
@@ -114,7 +114,7 @@ img:hover {
 
 <CENTER>
 <audio controls autoplay>
-  <source src="MUSIC\BEAUTIFUL.mp3" type="audio/mpeg">
+  <source src="MUSIC/BEAUTIFUL.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 </CENTER>
