--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -141,7 +141,7 @@ img:hover {
 
 <CENTER>
 <audio controls autoplay>
-  <source src="MUSIC\BTS _LIFE_GOES_ON.mp3" type="audio/mpeg">
+  <source src="MUSIC/BTS _LIFE_GOES_ON.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 </CENTER>
