--- a/PORTFOLIO.html
+++ b/PORTFOLIO.html
@@ -107,7 +107,7 @@ img:hover {
 
 <CENTER>
 <audio controls autoplay>
-  <source src="MUSIC\RUMOR.mp3" type="audio/mpeg">
+  <source src="MUSIC/RUMOR.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 </CENTER>
