--- a/BIODATA.html
+++ b/BIODATA.html
@@ -1,86 +1,71 @@
 <HTML>
-
-<TITLE> BIODATA </TITLE>
-
-<body background= "IMAGES/BACKGROUND.jpg">
-
-
-<CENTER>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-img:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-</style>
-</head>
-<body>
-
-<img src="IMAGES/HEADER.png" alt="HEADER" width="700" height="400">
-
-</body>
-</html>
-</CENTER>
-
-<p>
-<center>
-<A HREF="HOMEPAGE.html"><IMG SRC="IMAGES\BUTTON_HOMEPAGE.png"></A>
-<A HREF="BIODATA.html"><IMG SRC="IMAGES\BUTTON_BIODATA.png"></A>
-<A HREF="PORTFOLIO.html"><IMG SRC="IMAGES\BUTTON_PORTFOLIO.png"></A>
-<A HREF="EXPERIENCE.html"><IMG SRC="IMAGES\BUTTON_EXPERIENCE.png"></A>
-<A HREF="CONTACT_ME.html"><IMG SRC="IMAGES\BUTTON_CONTACT_ME.png"></A>
-</center>
-</p>
-
-<hr>
-
-<CENTER><H1><A NAME=TOP> 
-<font face="forte" color="black" font size="7"> ‧͙⁺˚*･༓☾☆ B I O D A T A ☆☽༓･*˚⁺‧͙ </A></H1>
-</font>
-</center>
+  <head>
+  <title> BIODATA </title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+  </head> 
 
 <CENTER>
-<marquee behavior="alternate"> <font face="forte", font size="3">
-"Always Do Your Best. What You Plant Now, You Will Harvest Later"
-</marquee>
-</center>
+  <H1>
+  <A NAME=TOP> 
+ ‧͙⁺˚*･༓☾☆ Biodata ☆☽༓･*˚⁺‧͙ 
+</A>
+  </H1>
 
-
-<p>
 <center>
 <img src="IMAGES/CAREER.jpeg" alt="GOALS.jpg" width="550" height="300">
 </center>
-</p>
 
-<H1>
-<CENTER>
-<p> 
-<font face="candara" color="black" font size="3"> 
-<p> 𝑬𝒗𝒆𝒓𝒚𝒐𝒏𝒆 𝒉𝒂𝒗𝒆 𝒕𝒉𝒆𝒊𝒓 𝒐𝒘𝒏 𝒈𝒐𝒂𝒍𝒔 𝒊𝒏 𝒍𝒊𝒇𝒆.
-<br>𝑮𝒐𝒂𝒍𝒔 𝒂𝒓𝒆 𝒕𝒉𝒆 𝒎𝒐𝒔𝒕 𝒊𝒎𝒑𝒐𝒓𝒕𝒂𝒏𝒕 𝒕𝒉𝒊𝒏𝒈 𝒊𝒏 𝒂 𝒑𝒆𝒓𝒔𝒐𝒏’𝒔 𝒍𝒊𝒇𝒆,
-<br>𝒘𝒊𝒕𝒉𝒐𝒖𝒕 𝒕𝒉𝒆𝒎 𝒚𝒐𝒖𝒓 𝒍𝒊𝒇𝒆 𝒘𝒐𝒖𝒍𝒅 𝒋𝒖𝒔𝒕 𝒃𝒆 𝒑𝒍𝒂𝒊𝒏 𝒂𝒏𝒅 𝒃𝒐𝒓𝒊𝒏𝒈 
-<br>𝒏𝒐𝒕 𝒆𝒙𝒄𝒊𝒕𝒆𝒎𝒆𝒏𝒕 𝒂𝒕 𝒂𝒍𝒍.
-</p>
-</center>
+<hr width=100%>
 
+<p>
+  <style>
+      a:link, a:visited
+      {
+      background-color: palevioletred;
+      color: whitesmoke;
+      padding: 15px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      border-radius: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+      a :hover, a:active
+      {
+      background-color:peachpuff;
+      }
+  </style>
+  </p>
 
+    <body>
+      <center>
+        <a href="HOMEPAGE.html"> HOME </a>
+        <A href="BIODATA.html">BIODATA</A>
+        <A href="PORTFOLIO.html">PORTFOLIO</A>
+        <A href="EXPERIENCE.html">EXPERIENCE</A>
+        <A href="CONTACT_ME.html">CONTACT ME</A>
+    </body>
+  </center> 
+
+<p>
+  <marquee behavior="alternate"> 
+    "always do your best. what you plant now, you will harvest later" 
+    </marquee>
+  </p>
+   
+  
+  <p style="background-color: rgb(207, 170, 182);"> 
+    <br> Everyone have their own goals in life. Goals are the most important thing in a person's life,
+    <br> without them your life would be just plain, boring and no excitement at all.</br> </p>
+          
 <center>
 <style>
 table, th, td {
@@ -88,9 +73,8 @@ table, th, td {
 }
 </style>
 </head>
+
 <body>
-
-
 <table>
   <tr>
     <th>Name</th>
@@ -166,15 +150,15 @@ table, th, td {
 </body>
 </html>
 
-
-
+<p>
 <center>
+  <font face= font size="3"></font>
 <P> Thank you for visiting my home page. Please come again. </P>
-<P> 𝐿𝑜𝓋𝑒, 𝒮𝒶𝓇𝒶𝒻𝒾𝑒𝓃𝒶 𝒮𝓎𝒶𝓏𝓌𝒶𝓃𝒾𝑒 </P>
+<p style= "font-size: medium;" <p style="font-family: Arial, Helvetica, sans-serif;"> Love, Sarafiena Syazwanie </P>
 <P> Click <A HREF= "#top">here</A> to go to the top of my home page. </P>
 <br></P>
 </center>
-
+</p> 
 
 <CENTER>
 <audio controls autoplay>
@@ -185,7 +169,7 @@ table, th, td {
 
 <P ALIGN="right">
 <FONT SIZE="1"COLOR="maroon"FACE="Arial"><B>
-&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 12 <SUP>th </sup> December 2020
+&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 22 <SUP>th </sup> December 2020
 </B></FONT>
 </P>
 
