--- a/CONTACT_ME.html
+++ b/CONTACT_ME.html
@@ -1,70 +1,65 @@
 <HTML>
-
-<Title> CONTACT ME </Title>
-
-<body background= "IMAGES\BACKGROUND.jpg">
+  <head>
+  <title> CONTACT ME </title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+  </head> 
 
 <CENTER>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-img:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
+  <H1>
+    <A NAME=TOP> 
+ ‧͙⁺˚*･༓☾☆ Contact Me ☆☽༓･*˚⁺‧͙ 
+</A>
+  </H1> 
 
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-</style>
-</head>
-<body>
+<img src="images/contact.gif" alt="HEADER" width="700" height="400"
+    </center>
 
-<img src="IMAGES\HEADER.png" alt="HEADER" width="700" height="400">
-
-</body>
-</html>
-</CENTER>
-
+<hr width=100%>
 
 <p>
-<center>
-<A HREF="HOMEPAGE.html"><IMG SRC="IMAGES\BUTTON_HOMEPAGE.png"></A>
-<A HREF="BIODATA.html"><IMG SRC="IMAGES\BUTTON_BIODATA.png"></A>
-<A HREF="PORTFOLIO.html"><IMG SRC="IMAGES\BUTTON_PORTFOLIO.png"></A>
-<A HREF="EXPERIENCE.html"><IMG SRC="IMAGES\BUTTON_EXPERIENCE.png"></A>
-<A HREF="CONTACT_ME.html"><IMG SRC="IMAGES\BUTTON_CONTACT_ME.png"></A>
-</center>
-</p>
+  <style>
+      a:link, a:visited
+      {
+      background-color: palevioletred;
+      color: whitesmoke;
+      padding: 15px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      border-radius: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+      a :hover, a:active
+      {
+      background-color:peachpuff;
+      }
+  </style>
+  </p>
 
+    <body>
+      <center>
+        <a href="HOMEPAGE.html"> HOME </a>
+        <A href="BIODATA.html">BIODATA</A>
+        <A href="PORTFOLIO.html">PORTFOLIO</A>
+        <A href="EXPERIENCE.html">EXPERIENCE</A>
+        <A href="CONTACT_ME.html">CONTACT ME</A>
+    </body>
+  </center>
 
-<hr>
-
-<CENTER><H1><A NAME=TOP> 
-<font face="forte" color="black" font size="7"> CONTACT ME </A>
-</H1>
-</font>
-</center>
-
-<p>
-<CENTER>
-<marquee behavior="alternate"> <font face="forte", color="black" font size="3">
-“You can click on the icons below to contact me!"
+  <p>
+<marquee behavior="alternate">
+“you can click on the icons below to contact me!"
 </marquee>
-</center>
 </p>
+
 
 <center>
 <TABLE BORDER="1">
@@ -92,12 +87,11 @@ img:hover {
 </CENTER>
 
 <H1>
-<p>
-<font face="candara", color="black" font size="3">
+<font face= font size="3">
 <center>
 <P> Thank you for visiting my home page. Please come again. </P>
 <P> Send email to <A HREF= MAILTO:sarafienasuhaimi@gmail.com"> sarafienasuhaimi@gmail.com </A> </P>
-<P> 𝐿𝑜𝓋𝑒, 𝒮𝒶𝓇𝒶𝒻𝒾𝑒𝓃𝒶 𝒮𝓎𝒶𝓏𝓌𝒶𝓃𝒾𝑒 </P>
+<p style= "font-size: medium;" <p style="font-family: Arial, Helvetica, sans-serif;"> Love, Sarafiena Syazwanie </P>
 <P> Click <A HREF= "#top">here</A> to go to the top of my home page. </P>
 </P>
 </center>
@@ -109,14 +103,14 @@ img:hover {
 </audio>
 </CENTER>
 
-<P ALIGN="center">
-<FONT SIZE="2"COLOR="black"FACE="Arial"><B>
-If you have any questions abut me, call on 01111457909
-</B></FONT></P>
+<p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+If you have any inquiries, please feel free to contact me at 011-11457909 
+</p> 
+
 
 <P ALIGN="right">
 <FONT SIZE="1"COLOR="maroon"FACE="Arial"><B>
-&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 12 <SUP>th </sup> December 2020
+&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 22 <SUP>th </sup> December 2020
 </B>
 </FONT>
 </P>
