--- a/EXPERIENCE.html
+++ b/EXPERIENCE.html
@@ -1,86 +1,77 @@
 <HTML>
+  <head>
+  <title> EXPERIENCE </title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+  </head> 
 
-<TITLE> EXPERIENCE </TITLE>
 
-<body background= "IMAGES\BACKGROUND.jpg">
-
-
-<CENTER>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-img:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-</style>
-</head>
-<body>
-
-<img src="IMAGES\HEADER.png" alt="HEADER" width="700" height="400">
-
-</body>
-</html>
-</CENTER>
+  <CENTER>
+    <h1>
+      <A NAME=TOP> 
+        ‧͙⁺˚*･༓☾☆ My Experience ☆☽༓･*˚⁺‧͙
+        </A></h1>
 
 <p>
-<center>
-<A HREF="HOMEPAGE.html"><IMG SRC="IMAGES\BUTTON_HOMEPAGE.png"></A>
-<A HREF="BIODATA.html"><IMG SRC="IMAGES\BUTTON_BIODATA.png"></A>
-<A HREF="PORTFOLIO.html"><IMG SRC="IMAGES\BUTTON_PORTFOLIO.png"></A>
-<A HREF="EXPERIENCE.html"><IMG SRC="IMAGES\BUTTON_EXPERIENCE.png"></A>
-<A HREF="CONTACT_ME.html"><IMG SRC="IMAGES\BUTTON_CONTACT_ME.png"></A>
-</center>
+  <center>
+  <img src="IMAGES\OMSA.jpeg" alt="OMSA.jpg" width="500" height="500">
+  </center>
 </p>
 
-<hr>
+  <hr width=100%>
 
-<CENTER><H1><A NAME=TOP> 
-<font face="forte" color="black" font size="7"> ‧͙⁺˚*･༓☾☆ MY EXPERIENCE ☆☽༓･*˚⁺‧͙ </A></H1>
-</font>
-</center>
+  <p>
+    <style>
+        a:link, a:visited
+        {
+        background-color: palevioletred;
+        color: whitesmoke;
+        padding: 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        border-radius: 20px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+        a :hover, a:active
+        {
+        background-color:peachpuff;
+        }
+    </style>
+    </p>
+  
+      <body>
+        <center>
+          <a href="HOMEPAGE.html"> HOME </a>
+          <A href="BIODATA.html">BIODATA</A>
+          <A href="PORTFOLIO.html">PORTFOLIO</A>
+          <A href="EXPERIENCE.html">EXPERIENCE</A>
+          <A href="CONTACT_ME.html">CONTACT ME</A>
+      </body>
+    </center>
 
-<CENTER>
-<marquee behavior="alternate"> <font face="forte", font size="3">
-♡´･ᴗ･`♡ 𝐵𝑒 𝒷𝓇𝒶𝓋𝑒. 𝒯𝒶𝓀𝑒 𝓇𝒾𝓈𝓀𝓈. 𝒩𝑜𝓉𝒽𝒾𝓃𝑔 𝒸𝒶𝓃 𝓈𝓊𝒷𝓈𝓉𝒾𝓉𝓊𝓉𝑒 𝑒𝓍𝓅𝑒𝓇𝒾𝑒𝓃𝒸𝑒 ♡´･ᴗ･`♡
+<p>
+<marquee behavior="alternate">
+♡´･ᴗ･`♡ be brave. take risks. nothing can substitute experience ♡´･ᴗ･`♡
 </marquee>
-</center>
-
-
-<p>
-<center>
-<img src="IMAGES\OMSA.jpeg" alt="OMSA.jpg" width="600" height="400">
-</center>
 </p>
 
-<center>
-<font size="4"> 
-<p> 𝒎𝒚 𝒕𝒆𝒂𝒎𝒎𝒂𝒕𝒆𝒔, 𝒎𝒚 𝒔𝒆𝒄𝒐𝒏𝒅 𝒇𝒂𝒎𝒊𝒍𝒚 </p>
-</center>
-
-⳾*⑅*❀⑅*❀⑅*❀⑅*❀⑅*❀⑅*⳾⳾*⑅*❀⑅*❀⑅*❀⑅*❀⑅*❀⑅*⳾⳾*⑅*❀⑅*❀⑅*❀⑅*❀⑅*❀⑅*⳾⳾*⑅*❀⑅*❀⑅*❀⑅*❀⑅*❀⑅*⳾⳾*⑅*❀⑅*❀⑅*❀⑅*❀⑅*❀⑅*⳾⳾*⑅*❀⑅*❀⑅*❀⑅*❀⑅*❀⑅*⳾⳾*⑅*❀
+<p style="background-color: rgb(207, 170, 182);"> 
+ my teammates, my second family </p>
 
 <H1>
-<p> 
-<font face="candara" color="black" font size="3">
-
-<center>
+  <p> 
+  <font face= font size="3"> 
+    <center>
 <p> I have gained lots of new knowledge and experiences during my diploma in UiTM Kedah.
 <br> Here, I am going to tell you about it. </p> </br> 
 
@@ -93,7 +84,7 @@ img:hover {
 	<li> "Karnival Usahanita Siri 1 dan Siri 2" </li>
 	<li> “Program Tautan Kasih” with Office Management Club, UiTM Melaka </li>
 	<li> Corporate Social Responsibility (CSR) Program at Kampung Jerlun, Kedah </li>
-<br> I participate in OMSA from zero til I know everything in handling event and dealing with high-rank people. </li> 
+<p>I participate in OMSA from zero til I know everything in handling event and dealing with high-rank people.
 </p> </br> </center>
 
 <center>
@@ -106,11 +97,12 @@ img:hover {
 
 <center>
 <P> Thank you for visiting my home page. Please come again. </P>
-<P> 𝐿𝑜𝓋𝑒, 𝒮𝒶𝓇𝒶𝒻𝒾𝑒𝓃𝒶 𝒮𝓎𝒶𝓏𝓌𝒶𝓃𝒾𝑒 </P>
+<p style= "font-size: medium;" <p style="font-family: Arial, Helvetica, sans-serif;"> Love, Sarafiena Syazwanie </P>
 <P> Click <A HREF= "#top">here</A> to go to the top of my home page. </P>
 <br>
 </P>
 </center>
+</H1>
 
 <CENTER>
 <audio controls autoplay>
@@ -121,7 +113,7 @@ img:hover {
 
 <P ALIGN="right">
 <FONT SIZE="1"COLOR="maroon"FACE="Arial"><B>
-&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 12 <SUP>th </sup> December 2020
+&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 22 <SUP>th </sup> December 2020
 </B></FONT>
 </P>
 </BODY>
