--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -1,84 +1,71 @@
 <HTML>
-
+<head>
 <title> HOMEPAGE </title>
-
-<body background= "IMAGES\PETAL.gif">
-
+<link rel="stylesheet" href="css/style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
+</head> 
 
 <CENTER>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-img:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
+  <H1>
+    <A NAME=TOP> 
+<h1> ‧͙⁺˚*･༓☾☆ My Homepage  ☆☽༓･*˚⁺‧͙ </A></h1> 
+</font>
 
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-</style>
-</head>
-<body>
-
-<img src="IMAGES/HEADER.png" alt="HEADER" width="700" height="400">
-
-</body>
-</html>
-</CENTER>
-
-<p>
-<center>
-<A HREF="HOMEPAGE.html"><IMG SRC="IMAGES\BUTTON_HOMEPAGE.png"></A>
-<A HREF="BIODATA.html"><IMG SRC="IMAGES\BUTTON_BIODATA.png"></A>
-<A HREF="PORTFOLIO.html"><IMG SRC="IMAGES\BUTTON_PORTFOLIO.png"></A>
-<A HREF="EXPERIENCE.html"><IMG SRC="IMAGES\BUTTON_EXPERIENCE.png"></A>
-<A HREF="CONTACT_ME.html"><IMG SRC="IMAGES\BUTTON_CONTACT_ME.png"></A>
-</center>
-</p>
+<img src="images/molang.gif">
+</center> 
 
 <hr width=100%>
 
-<CENTER><H1><A NAME=TOP> 
-<font face="forte" color="black" font size="7"> ‧͙⁺˚*･༓☾☆ M Y  H O M E P A G E  ☆☽༓･*˚⁺‧͙ </A></H1>
-</font>
-</center>
+<p>
+  <style>
+      a:link, a:visited
+      {
+      background-color: palevioletred;
+      color: whitesmoke;
+      padding: 15px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      border-radius: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+      a :hover, a:active
+      {
+      background-color:peachpuff;
+      }
+  </style>
+  </p>
 
-<marquee behavior="alternate"> <font face="forte", font size="5">
-<br> Hello, you lovely people.
-<br> Welcome to my world.
+    <p> 
+    <body>
+      <center>
+        <a href="HOMEPAGE.html"> HOME </a>
+        <A href="BIODATA.html">BIODATA</A>
+        <A href="PORTFOLIO.html">PORTFOLIO</A>
+        <A href="EXPERIENCE.html">EXPERIENCE</A>
+        <A href="CONTACT_ME.html">CONTACT ME</A>
+      </p>
+    </body>
+  </center> 
+
+<marquee behavior="alternate">
+<br> hello, you lovely people.
+<br> welcome to my world.
 </marquee>
 
-<center>
-<H1>
-<p> 
-<font face="candara", font size="3">
 
+<center>
 <p> This is where I'm going to share a little bit about my life with you.
 <br> I hope you will enjoy the reading as much as I enjoyed the writing.
 <br> Here I want to share with you one of my favorite article that I read.
 </p> </center>
 
-<center> 
-<p> 𝑳𝒊𝒕𝒕𝒍𝒆 𝒈𝒊𝒓𝒍𝒔 𝒘𝒊𝒕𝒉 𝒃𝒊𝒈 𝒅𝒓𝒆𝒂𝒎𝒔 𝒃𝒆𝒄𝒐𝒎𝒆 𝒘𝒐𝒎𝒆𝒏 𝒘𝒊𝒕𝒉 𝒃𝒊𝒈 𝒗𝒊𝒔𝒊𝒐𝒏𝒔. </center> </p>
-
 <center>
-<H1>
-<p>
-<font face="candara", font size="3">
-
 <p>When you're growing up you're told to dream big, reach for the stars, and you can be whatever you want to be. 
 <br> More than likely you have big dreams for yourself: being a doctor, a teacher, an attorney, the list can go on forever. 
 <br> Sometimes society steps in and tells you that your dreams are too big. You wonder how a dream can be too big? 
@@ -126,14 +113,14 @@ img:hover {
 
 <center>
 <p>
-𝑲𝒆𝒆𝒑 𝒐𝒏 𝒅𝒓𝒆𝒂𝒎𝒊𝒏𝒈,
+Keep on dreaming 
 <br>
-𝑺𝒐𝒎𝒆𝒐𝒏𝒆 𝑾𝒉𝒐 𝑰𝒔 𝑺𝒕𝒊𝒍𝒍 𝑫𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑩𝒊𝒈
+Someone who is still dreaming big
 </p>
 
 
 <P> Thank you for visiting. Please come again. </P>
-<P> 𝐿𝑜𝓋𝑒, 𝒮𝒶𝓇𝒶𝒻𝒾𝑒𝓃𝒶 𝒮𝓎𝒶𝓏𝓌𝒶𝓃𝒾𝑒 </P>
+<p style= "font-size: medium;" <p style="font-family: Arial, Helvetica, sans-serif;"> Love, Sarafiena Syazwanie </P>
 <P> Click <A HREF= "#top">here</A> to go to the top of my home page. </P>
 <br>
 </P>
@@ -148,7 +135,7 @@ img:hover {
 
 <P ALIGN="right">
 <FONT SIZE="1"COLOR="maroon"FACE="Arial"><B>
-&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 12 <SUP>th </sup> December 2020
+&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 22 <SUP>th </sup> December 2020
 </B></FONT>
 </P>
 </center>
