--- a/PORTFOLIO.html
+++ b/PORTFOLIO.html
@@ -1,84 +1,73 @@
-<html>
+<HTML>
+    <head>
+    <title> PORTFOLIO </title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+    </head> 
 
-<Title> PORTFOLIO </Title>
+    <CENTER>
+      <H1>
+        <A NAME=TOP> 
+    <h1> ‧͙⁺˚*･༓☾☆ My Portfolio ☆☽༓･*˚⁺‧͙ </A></h1> 
+    </font>
 
-<CENTER>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-img:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-</style>
-</head>
-<body>
-
-<img src="IMAGES/HEADER.png" alt="HEADER" width="700" height="400">
-
-</body>
-</html>
-</CENTER>
-
-
-<p>
-<center>
-<A HREF="HOMEPAGE.html"><IMG SRC="IMAGES\BUTTON_HOMEPAGE.png"></A>
-<A HREF="BIODATA.html"><IMG SRC="IMAGES\BUTTON_BIODATA.png"></A>
-<A HREF="PORTFOLIO.html"><IMG SRC="IMAGES\BUTTON_PORTFOLIO.png"></A>
-<A HREF="EXPERIENCE.html"><IMG SRC="IMAGES\BUTTON_EXPERIENCE.png"></A>
-<A HREF="CONTACT_ME.html"><IMG SRC="IMAGES\BUTTON_CONTACT_ME.png"></A>
-</center>
-</p>
-
-<CENTER><H1><A NAME=TOP> 
-<font face="forte" color="black" font size="7" style="color:#333333"> ‧͙⁺˚*･༓☾☆ My Personal Biography ☆☽༓･*˚⁺‧͙ </A></H1>
-</font>
-</center>
-</head>
-
-
-<body background= "IMAGES/BACKGROUND.jpg">
-
-<CENTER>
-<marquee behavior="alternate"> <font face="forte", font size="3">
- “She flies by her own wings"
-</marquee>
-</center>
-
-<center>
-<p>
-<img src="IMAGES/SARAFIENA.jpeg" alt="sarafiena.jpg" style="width:600px;height:300;">
-</CENTER>
-</p>
-</center>
-
-<center>
-<p> ＊*•̩̩͙✩•̩̩͙*˚ 𝒌𝒆𝒆𝒑 𝒈𝒐𝒊𝒏𝒈, 𝒌𝒆𝒆𝒑 𝒈𝒓𝒐𝒘𝒊𝒏𝒈 ˚*•̩̩͙✩•̩̩͙*˚＊
-</P>
-</center>
+    <center>
+      <p>
+      <img src="IMAGES/SARAFIENA.jpeg" alt="sarafiena.jpg" style="width:580px;height:340;">
+      </CENTER>
+      </p>
+      </center>
 
 <hr width=100%>
 
+  <p>
+    <style>
+        a:link, a:visited
+        {
+        background-color: palevioletred;
+        color: whitesmoke;
+        padding: 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        border-radius: 20px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+        a :hover, a:active
+        {
+        background-color:peachpuff;
+        }
+    </style>
+    </p>
+  
+      <body>
+        <center>
+          <a href="HOMEPAGE.html"> HOME </a>
+          <A href="BIODATA.html">BIODATA</A>
+          <A href="PORTFOLIO.html">PORTFOLIO</A>
+          <A href="EXPERIENCE.html">EXPERIENCE</A>
+          <A href="CONTACT_ME.html">CONTACT ME</A>
+      </body>
+    </center>
+
+    <p>
+<marquee behavior="alternate"> 
+ <br> ＊*•̩̩͙✩•̩̩͙*˚ keep going, keep growing ˚*•̩̩͙✩•̩̩͙*˚＊ </br> 
+</marquee>
+</p>
+
 <H1>
 <p> 
-<font face="candara" color="black" font size="3"> 
+<font face= font size="3"> 
 <center>
 <p> My name is Nursarafiena Syazwanie Binti Suhaimi. Usually people will call me Fiena. 
 <br> I am from Kangar, Perlis. I was born in 29 September 1999 at Hospital Besar Kangar. 
@@ -99,7 +88,7 @@ img:hover {
 
 <center>
 <P> Thank you for visiting. Please come again. </P>
-<P> 𝐿𝑜𝓋𝑒, 𝒮𝒶𝓇𝒶𝒻𝒾𝑒𝓃𝒶 𝒮𝓎𝒶𝓏𝓌𝒶𝓃𝒾𝑒 </P>
+<p style= "font-size: medium;" <p style="font-family: Arial, Helvetica, sans-serif;"> Love, Sarafiena Syazwanie </P>
 <P> Click <A HREF= "#top">here</A> to go to the top of my home page. </P>
 <br>
 </P>
@@ -115,7 +104,7 @@ img:hover {
 
 <P ALIGN="right">
 <FONT SIZE="1"COLOR="maroon"FACE="Arial"><B>
-&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 12 <SUP>nd </sup> December 2020
+&copy; NURSARAFIENA SYAZWANIE BINTI SUHAIMI. Last updated 22 <SUP>nd </sup> December 2020
 </B></FONT>
 </P>
 </BODY>
