--- a/CONTACT_ME.html
+++ b/CONTACT_ME.html
@@ -19,7 +19,7 @@
 </A>
   </H1> 
 
-<img src="images/contact.gif" alt="HEADER" width="700" height="400"
+<img src="IMAGES/contact.gif" alt="HEADER" width="700" height="400"
     </center>
 
 <hr width=100%>
