--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -16,7 +16,7 @@
 <h1> ‧͙⁺˚*･༓☾☆ My Homepage  ☆☽༓･*˚⁺‧͙ </A></h1> 
 </font>
 
-<img src="images/molang.gif">
+<img src="IMAGES\molang.gif">
 </center> 
 
 <hr width=100%>
